--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,10 +9,50 @@
 }
 
 body {
-    background-color: #000;
-    color: #fff;
+    background-color: #000000;
+    color: #027f83;
 }
 
 .main {
     padding: 1rem;
+    margin: 1rem;
+    border: 1px solid #C6FFFA;
+    border-radius: .5rem;
+}
+
+.main::before,
+.main::after {
+    content: '';
+    background-image: url('../img/teste.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+    position: fixed;
+    width: 140vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: -1;
+     
+}
+
+.main::after {  
+    content: '';
+    top: auto;
+    left: auto;
+    bottom: 0;
+    right: 0;
+    transform: rotate(180deg);
+}
+
+@media only screen and (min-width: 768px) {
+    .main {
+        max-width: 1024px;
+        margin: 1rem auto;
+    }
+
+    .main::before, 
+    .main::after {
+        width: 70vw;
+    }
 }
