--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -14,3 +14,69 @@
     text-align: center;
     font-family: 'Neue Machina';
 }
+
+.information {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.information p {
+    margin: .5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 1.125rem;
+}
+
+.information p::before {
+    content: '';
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    background-image: url(/assets/img/icons/contato.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-right: .5rem;
+}
+
+.information .job::before {
+    background-image: url(/assets/img/icons/test2.svg);
+}
+
+.information .email::before {
+    background-image: url(/assets/img/icons/email_open.svg);
+}
+
+.information .location::before {
+    background-image: url(/assets/img/icons/localization.svg);
+}
+
+.information .phone::before {
+    background-image: url(/assets/img/icons/whatsapp_figma.svg);
+}
+
+@media only screen and (min-width: 768px){ 
+    .header {
+        display: grid;
+        grid-template-areas: 
+            "photo title"
+            "photo information";
+    }
+    .header .photo {
+        grid-area: photo;
+        margin: 0 auto;
+    }
+
+    .header .title {
+        grid-area: title;
+        text-align: start;
+        max-width: 200px;
+    }
+
+    .header .information {
+        grid-area: information;
+    }
+
+}
