--- a/assets/css/language.css
+++ b/assets/css/language.css
@@ -13,9 +13,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem;
+    padding-right: 1rem;
     font-weight: 700;
-    font-size: 1rem;
 }
 
 .languages li::before {
