--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -1,5 +1,3 @@
-
-
 .acordeon {
     display: flex;
     flex-direction: column;
@@ -32,6 +30,7 @@
 .acordeon .trigger h2 {
     margin: 0;
     font-size: 1.5rem;
+    text-align: start;
 }
 
 .acordeon .trigger:hover {
