--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,10 +1,9 @@
-/*C6FFFA cor dos icons*/
-
 .header {
     display: flex;
     flex-direction: column;
     align-items: center;
     min-width: 310px;
+    position: relative;
 }
 
 .header .photo {
@@ -38,7 +37,6 @@
     display: inline-block;
     width: 1rem;
     height: 1rem;
-    background-image: url(/assets/img/icons/contato.svg);
     background-repeat: no-repeat;
     background-size: contain;
     margin-right: .5rem;
@@ -75,7 +73,7 @@
     .header .title {
         grid-area: title;
         text-align: start;
-        max-width: 200px;
+        max-width: 210px;
     }
 
     .header .information {
